--- a/assets/main.css
+++ b/assets/main.css
@@ -1,41 +1,44 @@
-body{
-    background: lightblue;
-    font-size: 15px;
-    
-}
-h1{
-    color: hotpink;
-    font-size: 20;
-    font-family: sans-serif;
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-p:hover{
-    color: yellow;
+
+nav {
+    background-color: #B2E0AE;
+    padding: 0% 1% 1% 1%;
 }
 
-.swag{
-    color: green;    
+nav ul {
+    width: 30%;
+    margin: 0 auto;
 }
 
-#wrapper{
-    width: 705px;
-    margin: auto;
+h1, h2 {
+    text-align: center;
 }
 
-#Banner{
-    width: 50%;
-    border: 1px solid #000000;
+#content {
+    background-color: #E8EBC2;
+    font-family: Arial, Helvetica, sans-serif;
     float: left;
-    
-}
-#other{
-    clear: left;
-    width: 50%;
-    border: 1px solid #000000;
-    float: right;
-    
 }
 
-.wrapper{
-    width: wi;
+nav ul li {
+    display: inline;
+    margin-right: 15%;
+}
+
+p {
+    font-size: 12px;
+}
+.loremipsum {
+    width: 80%;
+    text-align: center;
+}
+
+article {
+    width: 30%;
+    float: left;
 }
